compositor-drm: ensure we run drm-backend using weston-launch

We do this by checking if launcher_sock != -1

This fixes https://bugs.freedesktop.org/show_bug.cgi?id=60926